--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
    🌟 VARIÁVEIS GERAIS
    =================================================== */
 :root {
-  --primary-color: #2C3E50;
+  --primary-color: #2C3E50;;;;
   --secondary-color: #2980B9;
   --background-gradient: linear-gradient(135deg, #000000, #111827);
   --light-color: #ECF0F1;
